--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.6",
     "next": "14.2.5",
